[gd_scene load_steps=5 format=2]

[ext_resource path="res://Conversation.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ConversationEngine.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Person.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/table.png" type="Texture" id=4]

[node name="Conversation" type="Node2D"]
script = ExtResource( 1 )

[node name="ConversationEngine" parent="." instance=ExtResource( 2 )]

[node name="Person1" parent="." instance=ExtResource( 3 )]
position = Vector2( -119, 117 )

[node name="Person2" parent="." instance=ExtResource( 3 )]
position = Vector2( 112, 113 )

[node name="Person3" parent="." instance=ExtResource( 3 )]
position = Vector2( 290, 0 )

[node name="Person4" parent="." instance=ExtResource( 3 )]
position = Vector2( 102, -133 )
z_index = -1

[node name="Person5" parent="." instance=ExtResource( 3 )]
position = Vector2( -113, -135 )
z_index = -1

[node name="Person6" parent="." instance=ExtResource( 3 )]
position = Vector2( -284, 2 )

[node name="NearEndTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.6, 2.6 )
z_index = -1
texture = ExtResource( 4 )

[connection signal="on_topic_change" from="ConversationEngine" to="." method="_on_ConversationEngine_on_topic_change"]
[connection signal="on_topic_repeated" from="ConversationEngine" to="." method="_on_ConversationEngine_on_topic_repeated"]
[connection signal="timeout" from="NearEndTimer" to="." method="_on_NearEndTimer_timeout"]
